# 1-dark-matter-structure

./: .gitignore  AGENTS.md  CITATION.cff  CLAIMS.md  CONVENTIONS.md  DECISION_LOG.md  GATES.md  HANDOFF.md  LICENSE  MIGRATION.md  Makefile  PROGRESS.md  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  gate.yml  paper-sync.yml
archive/: README.md
data/: README.md  summary_v2.csv
derivations/: README.md
derivations/p1-iscatter-repro/: PREREGISTRATION.md
docs/: BRANCHING_POLICY.md  RESEARCH_WORKFLOW.md  RESULT_SCHEMA.md
paper/: README.md  yukawa_sparc_paper_v163.tex  yukawa_sparc_paper_v164.tex
results/: README.md
results/ac-test/: PROVENANCE.md  README.md  environment.txt
results/fiducial/: PROVENANCE.md  README.md  environment.txt
results/intrinsic-scatter/: PROVENANCE.md  README.md  environment.txt
results/intrinsic-scatter-repro/: COMPARISON.md  PROVENANCE.md  environment.txt
results/ml-prior/: PROVENANCE.md  README.md  environment.txt
results/nuisance/: PROVENANCE.md  (+2 more)
reviews/: README.md
scripts/: README.md  __init__.py  _paths.py  cluster_test.py  fiducial_ac_test.py  fiducial_rerun.py  intrinsic_scatter_repro.py  ml_prior_lognormal.py  ml_prior_mufixed.py  nuisance_comparison.py  plot_ac_test.py  rar_refit.py
tests/: README.md  _util.py  conftest.py  test_kernels.py  test_regression_ac_test.py  test_regression_fiducial.py  test_regression_iscatter_repro.py  test_regression_ml_prior.py  test_regression_nuisance.py  test_regression_refit.py  test_repository_structure.py
(+13 files in other folders)
