[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dark-matter-structure-research"
version = "0.0.0"
description = "Research infrastructure for Paper 1: Dark Matter Structure and Galaxy Phenomenology"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
