[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dark-matter-structure-research"
version = "0.1.0"
description = "Research infrastructure for Paper 1: Dark Matter Structure and Galaxy Phenomenology"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: full-sample (175-galaxy) regression anchors; excluded from the default suite",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["scripts", "paper"]

[tool.ruff.lint]
# The imported analysis scripts intentionally preserve their original terse
# style; lint the governance/test code, not the byte-identical scientific record.
